[package]
name = "strawberride"
version = "0.1.1"
edition = "2021"
description = "A Celeste map serializer and deserializer."
authors = ["baltdev"]
license = "MIT"
documentation = "https://docs.rs/strawberride"
repository = "https://github.com/balt-dev/strawberride"

[dependencies]
byteorder = "1"
itertools = "0.13"
indexmap = "2"
indent_write = "2"